# Radar

./: .gitignore  INSTALL.md  LICENSE  README.md  _radar_signal.c  config.toml  installer.iss  profile.out  pyproject.toml  radar.spec
c_ext/: build_c.py  radar_signal.c  radar_signal.h
rust/radar_accel/: Cargo.toml
rust/radar_accel/src/: lib.rs
src/radar/: __init__.py  __main__.py  app.py  audio.py  config.py  logging_setup.py
src/radar.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/radar/data/: __init__.py  cities.py  earthquake.py  signal.py  weather.py  world_polygons.json
src/radar/themes/: __init__.py  loader.py  watcher.py
src/radar/ui/: __init__.py  animations.py  layout.py  viewport.py
src/radar/ui/panels/: __init__.py  earthquake.py  map.py  status_bar.py  weather.py
tests/: conftest.py  test_accel_fallback.py  test_audio_queue.py  test_cities.py  test_config.py  test_earthquake.py  test_theme_loader.py  test_weather.py
themes/: arctic.json  ember.json  matrix.json  obsidian.json  phosphor.json  terminal.json
