[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "radar"
version = "0.1.0"
description = "Real-time earthquake & weather monitoring dashboard with TUI-inspired aesthetics"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "carlo"},
]

dependencies = [
    "dearpygui>=2.0",
    "aiohttp>=3.9",
    "tomli>=2.0;python_version<'3.11'",
    "watchdog>=4.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "aioresponses>=0.7",
    "ruff>=0.3",
    "mypy>=1.8",
]

[project.scripts]
radar = "radar.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
